k8s/04-postgres-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-app
  namespace: olist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-app
  template:
    metadata:
      labels:
        app: postgres-app
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "olist_user", "-d", "olist_db"]
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-app-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-app
  namespace: olist
spec:
  selector:
    app: postgres-app
  ports:
    - port: 5432
      targetPort: 5432
