k8s/11-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: olist-ingress
  namespace: olist
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: nginx
  rules:
    - host: api.olist.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: olist-api
                port:
                  number: 9090
    - host: auth.olist.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
