k8s/12-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-app-policy
  namespace: olist
spec:
  podSelector:
    matchLabels:
      app: postgres-app
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: olist-api
      ports:
        - port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-keycloak-policy
  namespace: olist
spec:
  podSelector:
    matchLabels:
      app: postgres-keycloak
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: keycloak
      ports:
        - port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vault-policy
  namespace: olist
spec:
  podSelector:
    matchLabels:
      app: vault
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: olist-api
      ports:
        - port: 8200
